--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
   <div class="images-container">
     <h2>Valentine's Day 2024</h2>
     <br>
-    <h3><i>"I came here tonight because when you realize you want to spend the rest of your life with somebody, you want the rest of your life to start as soon as possible."</h3></i>
+    <h3><i><center>To spend each day finding the next moment to be. To jump in that puddle. To dance in the aisle. To scream taylor swift. To laughing until we're blue. To keep falling in love.</center></h3></i> 
+    <h3><i><center>To love you each day, even more than the day before.</center></h3></i>
     <br>
     <img class="fade-in" src="pngs/2022.11.05.png" style="height: 33%; width: 33%;">
     <img class="fade-in" src="pngs/2022.11.11.png" style="height: 33%; width: 33%;">
